--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/0.7.2/tailwind.min.css"
     />
-    <title>React App</title>
+    <title>Todo React Hooks</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
